@startuml name

package models {
    class Combattant {
        - id: int
        - nom: str
        - piece: int
        - vie: int
        - maxVie: int
        - inventairePotions: int
        - inventaireArmes: list[Arme]
        - armeEquipee: Arme
        - niveau: int
        - experience: int
        - dao: DAO
    }

    class Personnage {
        - nom: str
        - piece: int
        - vie: int
    }

    class Arme {
        - id: int
        - nom: str
        - valeurOr: int
        - degat: int
        - image: Image.Image
    }

    class Quete {
        - nom: str
        - recompenseOr: int
        - difficulte: int
        - statut: str
        - niveau: int
    }

    class Donjon {
        - nom: str
        - difficulte: int
        - statut: str
        - niveau: int
    }

    class Monstre {
        - nom: str
        - piece: int
        - vie: int
        - niveau: int
    }

    class Forgeron {
    }

    class Medecin {
        - prixPotion: int
        - stockPotions: int
    }

    class GestionnaireDeQuetes {
    }
}

models.Personnage <|-- models.Combattant
models.Personnage <|-- models.Forgeron
models.Personnage <|-- models.Medecin
models.Personnage <|-- models.Monstre

models.Forgeron "1" --> "0..*" models.Arme : inventaireArmes

models.Combattant "1" --> "1" models.Arme : armeEquipee
models.Combattant "1" --> "0..1" models.Quete : queteActuelle
models.Combattant "1" --> "0..*" models.Donjon : donjonsExplores
models.Combattant "1" --> "0..*" models.Arme : inventaireArmes

models.Quete "1" --> "1" models.Monstre : monstreCible
models.Quete "0..*" --> "1" models.Donjon : donjonAssocie

models.Donjon "1" --> "1..*" models.Monstre : listeMonstres

models.Monstre "1" --> "1" models.Arme : armePossedee

@enduml